--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,8 @@
 #menu-toggle:checked + #menu{
     display:block;
 }
+.widget-image{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+}
